# procon-api-2025

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.uv  Makefile  README.md  compose.yml  dev.sh  pyproject.toml  requirements.txt  start.sh
app/: main.py  test.py
app/core/: auth.py  config.py  database.py  ranking_manager.py  security.py
app/models/: models.py
app/routers/: ranking.py  simulation.py
app/routers/v1/: answer.py  auth.py  question.py  ws.py
app/schemas/: problem.py  submission.py  user.py
app/services/: judge.py  judge_simulate.py  ranking.py
app/templates/: ranking.html  simulation.html
app/test/sample/: answer.json  question.json  result.json
app/utils/: file_tool.py  ingest_questions.py  logger.py
storages/questions/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
test/: gen_question.py  submit.py
test/sample/: answer.json  question.json
